@@ -46,7 +46,7 @@ Returns, as a string, the location of the machine on which ECL runs."
 (defun lisp-implementation-version ()
   "Args:()
 Returns the version of your ECL as a string."
-  "@PACKAGE_VERSION@ (CVS 2008-04-30 16:23)")
+  "@PACKAGE_VERSION@ (CVS 2008-04-30 23:26)")
 
 (defun machine-type ()
   "Args: ()
