@@ -111,6 +111,10 @@ ECL 0.9k:
  - ASDF:MAKE-BUILD now handles better the case of a monolithic FASL that
    has to include a number of other subsystems.
 
+ - We introduce a new operation, ASDF:LOAD-FASL-OP, which does the job of
+   ASDF:LOAD-OP but using a single FASL file per system, thus saving
+   resources and allowing easier redistribution of libraries.
+
  - The bignums produced by RANDOM did not have enough random bits.
 
  - ECL formerly accepted spaces between the comma and the @ and . characters
